# marketfox

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  indicators.py  main.py  models.py  schemas.py  seed.py  seed_ftse.csv
backend/app/routers/: analysis.py  health.py  prices.py  symbols.py
backend/app/tests/: test_health.py
